[package]
name = "tree-sitter-hl"
version = "0.1.0"
edition = "2018"

[lib]
crate_type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
neon = "0.8.1"
tree-sitter-c = { git = "https://github.com/tree-sitter/tree-sitter-c.git", tag = "v0.19.0" }
tree-sitter-cpp = "0.19.0"
tree-sitter-highlight = "0.19.2"
tree-sitter-rust = "0.19.0"
